# auth_telegram

./: docker-compose.yml  pyproject.toml
apps/: .env.example
apps/base/: app.sh  manage.py
apps/base/auth_telegram/: asgi.py  settings.py  urls.py  wsgi.py
apps/base/authentication/: urls.py  views.py
apps/base/authentication/templates/main/: index.html  success.html
apps/base/backend/management/commands/: bot.py
apps/base/user/: models.py
apps/base/user/migrations/: 0001_initial.py
apps/docker/web/: Dockerfile
